     will stop the creation of an executable stack simply because an input file
     is missing a .note.GNU-stack section, even on architectures where this
     ehaviour is the default.

* TYPE=<type> is now supported in an output section description to set the
  section type value.

* Remove (rudimentary) support for the x86-64 sub-architectures Intel L1OM and
  Intel K1OM.

Changes in 2.38:

* Add -z pack-relative-relocs/-z no pack-relative-relocs to x86 ELF
  linker to pack relative relocations in the DT_RELR section.

* Add support for the LoongArch architecture.

* Add -z indirect-extern-access/-z noindirect-extern-access to x86 ELF
  linker to control canonical function pointers and copy relocation.

* Add --max-cache-size=SIZE to set the the maximum cache size to SIZE
  bytes.

Changes in 2.37:

* arm-symbianelf support removed.

* Add -z report-relative-reloc to x86 ELF linker to report dynamic
  relative relocations.

* Add -z start-stop-gc to disable special treatment of __start_*/__stop_*
  references when --gc-sections.

* Add -Bno-symbolic to cancel -Bsymbolic and -Bsymbolic-functions.

Changes in 2.36:

* Add libdep plugin, for linking dependencies of static libraries that
  were recorded by ar in the __.LIBDEP archive member.

* Add --error-handling-script=<NAME> command line option to allow a helper
  script to be invoked when an undefined symbol or a missing library is
  encountered.  This option can be suppressed via the configure time
  switch: --enable-error-handling-script=no.

* Add -z lam-u48 to x86-64 ELF linker to generate LAM_U48 property.

* Add -z lam-u57 to x86-64 ELF linker to enerate LAM_U57 property.

* Add -z lam-u48-report=[none|warning|error] to report missing LAM_U48
  property.

* Add -z lam-u57-report=[none|warning|error] to report missing LAM_U57
  property.

* Add -z lam-report=[none|warning|error] to report missing LAM_U48 and
  LAM_U57 properties.

* Add -z x86-64-{baseline|v[234]} to the x86 ELF linker to mark