@@ -155,6 +155,12 @@ foreach flags $test_flags {
 	set extralibs "$extralibs -lz"
     }
 
+    # Check if the system's jansson library is used. If so, the object files will
+    # be using symbols from it, so link to it.
+    if { [lindex [remote_exec host fgrep "-q \"HAVE_JANSSON 1\" $srcdir/../config.h" ] 0] == 0 } then {
+	set extralibs "$extralibs -ljansson"
+    }
+
     # Plugin support requires linking with libdl.
     if { $plugins == "yes" } {
 	if { ![istarget "*-*-freebsd*"]} {
